--- a/style2.css
+++ b/style2.css
@@ -115,8 +115,8 @@ a.dropdown-item img{
 }
 
 .deskripsi {
-    font-family:'Times New Roman', Times, serif;
-    color: black;
+    font-family:'Montserrat', sans-serif;
+    color: #432C81;
 }
 
 .card {
