--- a/style2.css
+++ b/style2.css
@@ -143,7 +143,7 @@ a.dropdown-item img{
 
 .judesk {
     font-size: 40px;
-    font-family: cursive;
+    font-family: 'Montserrat';
     font-weight: bold;
     margin-top: 100px;
     text-align: center;
